--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1143,3 +1143,15 @@ path.bg {
 .rs-sidebar-wrapper {
   overflow-x: hidden;
 }
+
+.theme-editor {
+  position: fixed;
+  width: 50%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  background: #000;
+  &-navbar {
+    background: #000 !important;
+  }
+}
